--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Base */
+/* Estilo Base - Definições gerais do layout */
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f5f5f5;
@@ -10,6 +10,7 @@ body {
     min-height: 100vh;
 }
 
+/* Estilo do Container principal */
 .container {
     width: 50%;
     max-width: 1100px;
@@ -20,11 +21,15 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2, h3 {
+/* Estilo dos Títulos */
+h1,
+h2,
+h3 {
     color: #333;
     font-weight: 600;
 }
 
+/* Estilo dos Botões */
 button {
     padding: 12px 20px;
     background-color: #007BFF;
@@ -37,11 +42,14 @@ button {
     margin-bottom: 10px;
 }
 
+/* Efeito hover nos botões */
 button:hover {
     background-color: #0056b3;
 }
 
-input, select {
+/* Estilo para inputs e selects */
+input,
+select {
     width: 100%;
     padding: 12px;
     margin-bottom: 12px;
@@ -50,6 +58,7 @@ input, select {
     font-size: 16px;
 }
 
+/* Estilo para a lista de histórico */
 ul {
     list-style-type: none;
     padding: 0;
@@ -67,6 +76,7 @@ li:hover {
     transform: scale(1.05);
 }
 
+/* Estilo para transações de entrada e saída */
 li.entrada {
     background-color: #d4f1d4;
     color: green;
@@ -77,11 +87,13 @@ li.saida {
     color: red;
 }
 
+/* Estilo para a seção de totais */
 .totais h3 {
     font-weight: 600;
     color: #333;
 }
 
+/* Estilo para o histórico de transações */
 .historico {
     margin-top: 30px;
     padding: 10px;
@@ -95,6 +107,7 @@ li.saida {
     color: #0056b3;
 }
 
+/* Estilo do filtro de histórico */
 #filtro-historico {
     width: 50%;
     padding: 10px;
@@ -104,14 +117,30 @@ li.saida {
     font-size: 16px;
 }
 
-#limpar-historico{
-    color:white
-}
-
-#limpar-tudo{
+/* Estilo para os botões de limpar */
+#limpar-historico {
     color: white;
 }
 
+#limpar-tudo {
+    color: white;
+}
+
+/* Estilo da paginação */
+.paginacao-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.paginacao-container button {
+    margin: 0 5px;
+}
+
+.paginacao-container button.ativo {
+    background-color: #0056b3;
+    border: 2px solid #0056b3;
+}
 
 /* Responsividade */
 @media screen and (max-width: 1100px) {
