FinFlow - Project (att)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilo Base - Definições gerais do layout */
+/* Estilo Base -- Definições gerais do layout */
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f5f5f5;
